# pheval.ai_marrvel

./: README.md  config.yaml  pyproject.toml  tox.ini
.github/workflows/: pypi-publish.yml
src/pheval_ai_marrvel/: cli.py  constants.py  runner.py  tool_specific_configuration_options.py
src/pheval_ai_marrvel/post_process/: post_process.py  post_process_results_format.py
src/pheval_ai_marrvel/prepare/: prepare.py  prepare_input.py
src/pheval_ai_marrvel/run/: create_apptainer_commands.py  create_docker_commands.py  prepare_next_flow_commands.py  run.py
src/pheval_template/: runner.py
src/pheval_template/post_process/: post_process.py  post_process_results_format.py
src/pheval_template/run/: fake_predictor.py  run.py  run_tool.py
tests/: test_post_process_results_format.py
