[tool.poetry]
name = "pheval-ai-marrvel"
version = "0.1.7"
description = ""
authors = ["Yasemin Bridges <y.bridges@qmul.ac.uk>"]
readme = "README.md"
packages = [{include = "pheval_ai_marrvel", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
docker = "^7.1.0"
pheval = "^0.4.0"
numpy = ">=1.24.3,<1.25.0"

[tool.poetry.scripts]
pheval-ai = "pheval_ai_marrvel.cli:main"

[tool.poetry.plugins."pheval.plugins"]
template = "pheval_ai_marrvel.runner:AIMARRVELRunner"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.15.6"
pycodestyle = "^2.10.0"
coverage = "^6.5.0"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
